[package]
name = "actors"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = [
    "signal",
    "rt",
    "sync",
    "tokio-macros",
    "time",
    "macros",
    "rt-multi-thread",
] }
tower = { version = "0.5.2", features = ["util"] }

[dev-dependencies]
http-body-util = "0.1.3"
